[tool.poetry]
name = "pythonproject5"
version = "0.1.0"
description = ""
authors = ["Oscar Evertsson <oscar@arkkapital.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
